--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -149,7 +149,7 @@
                     </li>
 
                     <li class="sidebar-item">
-                        <a id="nav-show10" class="sidebar-link" href="/manufactured-product">
+                        <a id="nav-show10" class="sidebar-link" href="/manufactured-product/show">
                             <i class="fas fa-industry"></i> <span class="align-middle">Произведена продукция</span>
                         </a>
                     </li>
