trying to fix problem

--- a/src/main/resources/templates/ManufacturedProducts/all.html
+++ b/src/main/resources/templates/ManufacturedProducts/all.html
@@ -81,7 +81,7 @@
                       <img th:unless="${productPackageMapImages.containsKey(producedProduct.productId)}"
                            class="card-img-top"
                            src="/img/photos/noImage.png"
-                           style="height: 100px; width: ;100px">
+                           style="height: 100px; width: 100px">
                     </td>
 
                     <td>
