--- a/src/main/resources/templates/MaterialOrder/show.html
+++ b/src/main/resources/templates/MaterialOrder/show.html
@@ -25,6 +25,16 @@
         }
     </style>
 </head>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const navbar = document.getElementById("sidebar");
+        console.log(navbar);
+        const toggler = document.querySelector("a.sidebar-toggle");
+        toggler.addEventListener("click", () => {
+        navbar.classList.toggle("collapsed");
+        });
+    });
+</script>
 <body>
 <div class="wrapper">
     <th:block th:insert="~{fragments/header}"></th:block>
@@ -83,7 +93,8 @@
                                                     <span class="badge bg-success material-badge">
                                                         <span th:text="${item.orderedQuantity}"></span> бр.
                                                     </span>
-                                                    <a th:href="@{/material-order/item/edit/{id}(id=${item.id})}" class="btn btn-sm btn-warning">Редактирай</a>
+                                                    <a th:href="@{/material-order/item/edit/{id}(id=${item.id})}"
+                                                       class="btn btn-sm btn-warning">Редактирай</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -114,17 +125,21 @@
                                                         <i class="fas fa-cube fa-2x"></i>
                                                     </div>
                                                 </div>
-                                                <h6 class="card-title mb-1" th:text="${packageMap[item.materialId]?.productCode + ' - ' + packageMap[item.materialId]?.name}"></h6>
+                                                <h6 class="card-title mb-1"
+                                                    th:text="${packageMap[item.materialId]?.productCode + ' - ' + packageMap[item.materialId]?.name}"></h6>
                                                 <p>
                                                     Материал ID: <span th:text="${item.materialId}"></span><br>
-                                                    КОД: <span th:text="${packageMap[item.materialId]?.productCode ?: 'Няма код'}"></span><br>
-                                                    Налични бройки: <span th:text="${packageMap[item.materialId]?.availableQuantity ?: 'Няма инфо'}"></span><br>
+                                                    КОД: <span
+                                                        th:text="${packageMap[item.materialId]?.productCode ?: 'Няма код'}"></span><br>
+                                                    Налични бройки: <span
+                                                        th:text="${packageMap[item.materialId]?.availableQuantity ?: 'Няма инфо'}"></span><br>
                                                 </p>
 
                                                 <span class="badge bg-primary material-badge">
                                                     <span th:text="${item.orderedQuantity}"></span> бр.
                                                 </span>
-                                                <a th:href="@{/material-order/item/edit/{id}(id=${item.id})}" class="btn btn-sm btn-warning">Редактирай</a>
+                                                <a th:href="@{/material-order/item/edit/{id}(id=${item.id})}"
+                                                   class="btn btn-sm btn-warning">Редактирай</a>
                                             </div>
                                         </div>
                                     </div>
@@ -154,16 +169,19 @@
                                                         <i class="fas fa-utensils fa-2x"></i>
                                                     </div>
                                                 </div>
-                                                <h6 class="card-title mb-1"  th:text="${plateMap[item.materialId]?.name}"></h6>
+                                                <h6 class="card-title mb-1"
+                                                    th:text="${plateMap[item.materialId]?.name}"></h6>
 
                                                 <p>
                                                     Материал ID: <span th:text="${item.materialId}"></span><br>
-                                                    Налични бройки: <span th:text="${plateMap[item.materialId]?.availableQuantity ?: 'Няма инфо'}"></span><br>
+                                                    Налични бройки: <span
+                                                        th:text="${plateMap[item.materialId]?.availableQuantity ?: 'Няма инфо'}"></span><br>
                                                 </p>
                                                 <span class="badge bg-warning material-badge">
                                                     <span th:text="${item.orderedQuantity}"></span> бр.
                                                 </span>
-                                                <a th:href="@{/material-order/item/edit/{id}(id=${item.id})}" class="btn btn-sm btn-warning">Редактирай</a>
+                                                <a th:href="@{/material-order/item/edit/{id}(id=${item.id})}"
+                                                   class="btn btn-sm btn-warning">Редактирай</a>
                                             </div>
                                         </div>
                                     </div>
