--- a/src/main/resources/templates/OrderProduct/orderDetails.html
+++ b/src/main/resources/templates/OrderProduct/orderDetails.html
@@ -65,7 +65,7 @@ document.addEventListener("DOMContentLoaded", function() {
                                 <thead>
                                 <tr>
                                     <th>Снимка</th>
-                                    <th>Номер</th>
+                                    <th>Код</th>
                                     <th>Име</th>
                                     <th>Брой</th>
                                 </tr>
