--- a/src/main/resources/templates/Invoice/showAllInvoices.html
+++ b/src/main/resources/templates/Invoice/showAllInvoices.html
@@ -5,6 +5,7 @@
     <title>Всички Фактури</title>
     <link rel="icon" type="image/x-icon" href="/img/photos/noImage.png">
     <link href="/css/show.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
@@ -75,9 +76,12 @@
                                     <td th:text="${invoice.isCashPayment} ? 'В Брой' : 'По Банка'"></td>
                                     <td th:text="${invoice.deadline != null ? invoice.deadline.format(T(java.time.format.DateTimeFormatter).ofPattern('dd.MM.yyyy')) : ''}"></td>
                                     <td>
-                                        <form th:action="@{'/invoice/showId/' + ${invoice.id}}" method="get">
-                                            <button type="submit" class="btn btn-primary">Виж Фактурата</button>
+                                        <form th:action="@{'/invoice/showId/' + ${invoice.id}}" method="get" style="display:inline;">
+                                            <button type="submit" class="btn btn-outline-primary btn-sm" title="Виж Фактурата">
+                                                <i class="fas fa-eye"></i>
+                                            </button>
                                         </form>
+
                                     </td>
                                 </tr>
                                 </tbody>
